--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </ul>
     <h1>Work Experience</h1>
     <h2>Netcracker, Director Charging implementation</h2>
+    <h3>May 2022-March 2024</h3></br>
     <ul>
         <li>Built a 35 + member multi site team of solution architects, technical managers,business analysts & developers with a time bound measurable competency plan on Netcracker OCS product offering </li>
         <li>Lead and successfully delivered the multi site Active-Active Deployement architecture for ZAIN Saudi digital transformation</li>
@@ -46,6 +47,7 @@
         <li>Staffing, resource planning and knowledge management for all the Charging implementations globally as Charging Practice Head </li>
     </ul>
     <h2>Globallogic, AVP & Head Telecom & Media Unit</h2>
+    <h3>April 2015-April 2022</h3>
     <ul>
         <li>Built a 200 member team of senior managers, architects, Developers & DevOps as partner for Ericsson Billing & charging product development & support</li>
         <li>Lead a successful project transition for MediaKind IPTV platform hosted on OpenStack & Azure from teams in China & Canada for mutli year deal</li>
@@ -53,29 +55,35 @@
         <li>Established knowledge management, transition and competency building frameworks along with setting up Cloud practice Centre of exellence</li>
     </ul>
     <h2>Sonus Networks, Sr Engineering manager</h2>
+    <h3>April 2010-April 2015</h3>
     <ul>
         <li>Built and lead a team of senior architects & developers on resource management & call control compoment for Sonus Media Gateway</li>
         <li>Anchored Global Engineering prime role for Major product GA releases targetted for AT&T, Level3 , KDDI and likewise customers</li>
         <li>Colloborated with cross functional teams product management, system engineering, program managemen & sponsor to plan & deliver GA releases</li>
     </ul>
     <h2>Motorola, Engineering manager</h2>
+    <h3>July 2005-April2010</h3>
     <ul>
         <li>Release content planning , schedule tracking & delivery for VOIP products based on 3GPP standards to global customers</li>
         <li>Design & development of Push to talk client application</li>
     </ul>
-    <h2>Knowledge systems, Technical lead </h2>
+    <h2>Knowledge systems, Technical lead</h2>
+    <h3>May 2004-July 2005</h3>
     <ul>
         <li>Design & development of Push to talk client based on VOIP protocols</li>
     </ul>
     <h2>Sonim technologies, Sr Software engineer</h2>
+    <h3>Oct2002-April 2004</h3>
     <ul>
         <li>Design & development of List management comnponent based on HTTP & XML for Push to talk client</li>
     </ul>
     <h2>Philips semiconductors, Software Engineer</h2>
+    <h3>Sep 2000-Oct 2002</h3>
     <ul>
         <li>Design & development of wireless messaging SMS/EME/MMS component for Philips system solution</li>
     </ul>
     <h2>BHEL, Design Engineer</h2>
+    <h3>Jan 1998-Sep 2000</h3>
     <ul>
         <li>Design & development of microcontroller based solar power supply</li>
     </ul>
